[tool.poetry]
name = "getapi-bot"
version = "0.1.0"
description = ""
authors = ["Shkaf4i3 <fleximes@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
pycbrf = "^1.1.0"
pydantic-settings = "^2.5.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
